# hikotest

./: .gitignore  CMakeLists.txt  README.md
CMake/packaging/: hikotestConfig.cmake.in
src/hikotest/: hikotest.cpp  hikotest.hpp
